--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@upstash/redis": "^1.34.9",
+    "chalk": "^5.4.1",
     "dotenv": "^16.5.0",
     "node-fetch": "^3.3.2"
   }
