feat: add Telegram notifications for GitHub fetch start & rate limit logging

--- a/github-commit-cron/wrangler.jsonc
+++ b/github-commit-cron/wrangler.jsonc
@@ -11,8 +11,7 @@
 		"enabled": true
 	},
   "triggers": {
-    // run at minute 0,15,30,45 of every hour
-    "crons": ["*/15 * * * *"]
+    "crons": ["* * * * *"]
   },
   "vars": {
     // your polling endpoint
